<resources>
    <string name="app_name">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Candra Julius Sinaga</string>
    <string name="nav_header_subtitle">candrajulius1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="name">Julius Sinaga</string>
    <string name="email">Gagahkrenz23@gmail.com</string>
    <string name="menu_cart">Shop</string>
    <string name="menu_map">Hotel</string>
    <string name="menu_subway">Bus</string>
    <string name="cart">Cart</string>
    <string name="communicate">Communicate</string>
    <string name="hotel">Hotel</string>
    <string name="map">Map</string>
    <string name="kendaraan">kendaraan</string>
    <string name="bus">Bus</string>
    <string name="buka">buka</string>
    <string name="tutup">tutup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ini_adalah_fragment_shooping_cart">Ini adalah fragment Shooping Cart</string>
    <string name="subway_surf">This is My Acitvity Busway</string>
</resources>
