<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:title="@string/cart"
            android:id="@+id/cart1"
            android:icon="@drawable/ic_shopping_cart_black">

        </item>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

    <item android:title="@string/kendaraan">
        <menu>
            <item
                android:icon="@drawable/ic_map_black"
                android:title="@string/map"
                android:id="@+id/map" />
            <item
                android:title="@string/hotel"
                android:icon="@drawable/ic_hotel_black_"
                android:id="@+id/hotel" />
            <item
                android:id="@+id/bus"
                android:title="@string/bus"
                android:icon="@drawable/ic_subway_black_24dp" />
        </menu>
    </item>

</menu>
